--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-  
+  <head>
+    <title>My coepen landing page</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
   <body>
       <header id="header">
         <nav id="nav-bar">
